racing-analytics-sf/force-app/main/default/objects/Race_Result__c/Race_Result__c.object-meta.xml
<CustomObject>
    <label>Race Result</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Race Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Race Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>