racing-analytics-sf/force-app/main/default/objects/Race_Result__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Driver</label>
    <referenceTo>Driver__c</referenceTo>
    <relationshipLabel>Race Results</relationshipLabel>
    <relationshipName>Race_Results</relationshipName>
    <type>Lookup</type>
</CustomField>