racing-analytics-sf/force-app/main/default/objects/Race_Result__c/fields/Fastest_Lap__c.field-meta.xml
<CustomField>
    <fullName>Fastest_Lap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fastest Lap</label>
    <type>Checkbox</type>
</CustomField>