racing-analytics-sf/force-app/main/default/objects/Race_Result__c/fields/Grid_Position__c.field-meta.xml
<CustomField>
    <fullName>Grid_Position__c</fullName>
    <label>Grid Position</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>