racing-analytics-sf/force-app/main/default/objects/Race_Result__c/fields/Points_scored__c.field-meta.xml
<CustomField>
    <fullName>Points_scored__c</fullName>
    <label>Points scored</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>