racing-analytics-sf/force-app/main/default/objects/Race_Result__c/fields/Positions__c.field-meta.xml
<CustomField>
    <fullName>Positions__c</fullName>
    <label>Positions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>