racing-analytics-sf/force-app/main/default/objects/Race_Result__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Race</label>
    <referenceTo>Race__c</referenceTo>
    <relationshipLabel>Race Results</relationshipLabel>
    <relationshipName>Race_Results</relationshipName>
    <type>Lookup</type>
</CustomField>